# garch

./: .gitignore  Cargo.toml  README  README.MD  garch
scripts/: install.sh
scripts/generate/: docker_file.sh  env_file.sh  main_file.sh  project.sh
src/: main.rs
src/cmd/: boilerplate.rs  commands.rs  domain.rs  files_folders.rs  mod.rs
src/cmd/architecture/: mod.rs
src/cmd/architecture/clean/: mod.rs
src/cmd/architecture/hexagonal/: internal.rs  mod.rs  root.rs
src/cmd/database/: mod.rs
src/cmd/structure/: mod.rs
src/core/: cli.rs  files.rs  mod.rs  prompt_handler.rs  prompts.rs
src/prompt/: handler.rs  mod.rs
